# atellaluca

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
404/: index.html
about/: index.html
case-studies/: index.html
case-studies/fleet-backend/architecture/: index.html
case-studies/fleet-backend/overview/: index.html
case-studies/fleet-tracking/architecture/: index.html
case-studies/fleet-tracking/overview/: index.html
case-studies/importspy/architecture/: index.html
case-studies/importspy/contracts/: index.html
case-studies/importspy/overview/: index.html
case-studies/importspy/validation/: index.html
case-studies/importspy/violations/: index.html
case-studies/unified-backend/architecture/: index.html
case-studies/unified-backend/operations/: index.html
case-studies/unified-backend/overview/: index.html
case-studies/unified-backend/plugin-system/: index.html
contact/: index.html
cv/: index.html
cv-mt/: index.html
cv-pdf/: index.html
docs/: 404.md  about.md  contact.md  cv-mt.md  cv-pdf.md  cv.md  index.md  methodology.md  profile.md  robots.txt
docs/case-studies/: index.md
docs/stylesheets/: cv-pdf.css  header.css
javascripts/: mermaid-init.js
methodology/: index.html
overrides/: 404.html
profile/: index.html  mkdocs.yml
profile/docs/: contact.md  cv.md  index.md  methodology.md  profile.md
profile/site/: 404.html  index.html  sitemap.xml
profile/site/contact/: index.html
scripts/: export.py  export_cv_pdf.py
search/: search_index.json
(+39 files in other folders)
